remove moon from index, improve flexslider experience

--- a/view/index_header.html
+++ b/view/index_header.html
@@ -3,13 +3,6 @@
 				<ul class="slides">
 					<li>
 						<div>
-							<a href="index.php?route=moon">
-								<img src="resource/img/index/index_moonfest.jpg" alt="中秋禮皂">
-							</a>
-						</div>
-					</li>
-					<li>
-						<div>
 							<a href="index.php?route=about">
 								<img src="resource/img/index/index1.png" alt="三三吾鄉 About">
 							</a>
@@ -24,7 +17,7 @@
 					</li>
 					<li>
 						<div>
-							<a href="index.php?route=message">
+							<a href="index.php?route=heart_message">
 								<img src="resource/img/index/index3.png" alt="希望留心語 Activity">
 							</a>
 						</div>
