--- a/view/footer.html
+++ b/view/footer.html
@@ -53,15 +53,15 @@
 				</p>
 				<p>
 					<i class="fa fa-phone fa-fw fa-lg"></i>
-					[company_phone]
+					{company_phone}
 				</p>
 				<p>
 					<i class="fa fa-envelope fa-fw fa-lg"></i>
-					[company_email]
+					{company_email}
 				</p>
 				<p>
 					<i class="fa fa-map-marker fa-fw fa-lg"></i>
-					[company_address]
+					{company_address}
 				</p>
 			</div>
 			<div id="community">
