--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -345,23 +345,19 @@ $jumbotron-list: "\\[Route\\]", "about-team", "about", "attitude", "buy", "conta
 
 .jumbotron-title,
 .jumbotron-subtitle {
-	display: block;
 	margin: 0 auto;
 	color: #fff;
 	font-weight: 100;
 }
 
-// 1 + 2 + 3 + 4 = 33.75vw
 .jumbotron-title {
-	padding-top: 3.75vw;	// 1
-	line-height: 14vw;		// 2
+	padding-top: 3.75vw;
+	line-height: 14vw;
 }
 
-// h4 and .jumbotron-btn SHOULD NOT appear at the same time.
 .jumbotron-subtitle,
 .jumbotron-btn {
-	padding-bottom: 4vw;	// 3
-	line-height: 12vw;		// 4
+	line-height: 6vw;
 }
 
 // Laptop
