convert some pngs to jpgs, handling jumbotrons

--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -934,15 +934,15 @@ $buy-now-btn-width: 44%;
 }
 
 #feature1 {
-	background-image: url(../img/trial/feature1.png);
+	background-image: url(../img/trial/feature1.jpg);
 }
 
 #feature2 {
-	background-image: url(../img/trial/feature2.png);
+	background-image: url(../img/trial/feature2.jpg);
 }
 
 #feature3 {
-	background-image: url(../img/trial/feature3.png);
+	background-image: url(../img/trial/feature3.jpg);
 }
 
 .feature-title {
