--- a/view/content/about.html
+++ b/view/content/about.html
@@ -26,7 +26,7 @@
 					於是以社會企業的形式，串連社福團體與在地小農，靠著三方協力，一起朝同一目標與夢想前進。</p>
 				<div class="about-team-member">
 					<div class="about-team-member-img-wrap">
-						<img class="about-team-member-img" src="resource/img/member1.png" alt="CEO 尹又令 Pusher">
+						<img class="about-team-member-img" src="resource/img/member1.jpg" alt="CEO 尹又令 Pusher">
 					</div>
 					<div class="about-team-member-text">
 						<h3 class="about-team-member-title">
@@ -45,7 +45,7 @@
 				</div>
 				<div class="about-team-member">
 					<div class="about-team-member-img-wrap">
-						<img class="about-team-member-img" src="resource/img/member2.png" alt="CMO 陳雨彤 MAGGY">
+						<img class="about-team-member-img" src="resource/img/member2.jpg" alt="CMO 陳雨彤 MAGGY">
 					</div>
 					<div class="about-team-member-text">
 						<h3 class="about-team-member-title">
