--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -893,15 +893,15 @@ a.no-href {
 }
 
 #feature1 {
-  background-image: url(../img/trial/feature1.png);
+  background-image: url(../img/trial/feature1.jpg);
 }
 
 #feature2 {
-  background-image: url(../img/trial/feature2.png);
+  background-image: url(../img/trial/feature2.jpg);
 }
 
 #feature3 {
-  background-image: url(../img/trial/feature3.png);
+  background-image: url(../img/trial/feature3.jpg);
 }
 
 .feature-title {
