--- a/view/content/index.html
+++ b/view/content/index.html
@@ -4,13 +4,13 @@
 					<a class="hover-cover" href="index.php?route=product&itemno=4">
 						<span class="primary-btn">立即購買</span>
 					</a>
-					<img class="buy-now-img" src="resource/img/product/gift.png" alt="三三臺東意象禮盒組 Gift Boxs">
+					<img class="buy-now-img" src="resource/img/product/gift.jpg" alt="三三臺東意象禮盒組 Gift Boxs">
 				</div>
 				<div class="buy-now">
 					<a class="hover-cover" href="index.php?route=product&itemno=1">
 						<span class="primary-btn">立即購買</span>
 					</a>
-					<img class="buy-now-img" src="resource/img/product/rice.png" alt="田靜山巒禾風皂 Rice Soap">
+					<img class="buy-now-img" src="resource/img/product/rice.jpg" alt="田靜山巒禾風皂 Rice Soap">
 				</div>
 			</div>
 			<div class="slogan-wrap">
@@ -23,7 +23,7 @@
 			<div class="story-wrap">
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/society.png" alt="Story 1 愛的釀皂">
+						<img class="story-img" src="resource/img/society.jpg" alt="Story 1 愛的釀皂">
 					</div>
 					<div class="story-text">
 						<h3>愛的釀皂</h3>
@@ -34,7 +34,7 @@
 				</div>
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/farm.png" alt="Story 2 吾鄉小農">
+						<img class="story-img" src="resource/img/farm.jpg" alt="Story 2 吾鄉小農">
 					</div>
 					<div class="story-text">
 						<h3>吾鄉小農</h3>
@@ -45,7 +45,7 @@
 				</div>
 				<div class="story">
 					<div class="story-img-wrap">
-						<img class="story-img" src="resource/img/intern.png" alt="Story 3 社會企業">
+						<img class="story-img" src="resource/img/intern.jpg" alt="Story 3 社會企業">
 					</div>
 					<div class="story-text">
 						<h3>社會企業</h3>
