--- a/view/jumbotron/index_flexslider.html
+++ b/view/jumbotron/index_flexslider.html
@@ -4,31 +4,29 @@
 					<li>
 						<div>
 							<a href="index.php?route=about">
-								<img src="resource/img/index/index1.png" alt="三三吾鄉 About">
+								<img src="resource/img/index/index1.jpg" alt="三三吾鄉 About">
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
 							<a href="index.php?route=trial">
-								<img src="resource/img/index/index2.png" alt="試用皂免費申請中 Trial">
+								<img src="resource/img/index/index2.jpg" alt="試用皂免費申請中 Trial">
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
 							<a href="index.php?route=heart_message">
-								<img src="resource/img/index/index3.png" alt="希望留心語 Activity">
+								<img src="resource/img/index/index3.jpg" alt="希望留心語 Activity">
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
 							<a href="//www.facebook.com/trisoap/" target="_blank">
-								<img src="resource/img/index/index4.png" alt="工作坊開催中 Workshop">
+								<img src="resource/img/index/index4.jpg" alt="工作坊開催中 Workshop">
 							</a>
 						</div>
 					</li>
 				</ul>
-			</div>
-		</header>
