--- a/view/content/contact.html
+++ b/view/content/contact.html
@@ -22,15 +22,15 @@
 					<div id="contact-info">
 						<p>
 							<i class="fa fa-phone fa-fw fa-lg"></i>
-							[company_phone]
+							{company_phone}
 						</p>
 						<p>
 							<i class="fa fa-envelope fa-fw fa-lg"></i>
-							[company_email]
+							{company_email}
 						</p>
 						<p>
 							<i class="fa fa-map-marker fa-fw fa-lg"></i>
-							[company_address]
+							{company_address}
 						</p>
 					</div>
 				</div>
