--- a/view/content/soapstring.html
+++ b/view/content/soapstring.html
@@ -18,6 +18,6 @@
 					商品一覽
 				</h2>
 				<!-- Products -->
-				<div class="products"></div>
+				<div id="products"></div>
 			</div>
 		</main>
