finish single-product-desc

--- a/view/component/product.html
+++ b/view/component/product.html
@@ -1,15 +1,15 @@
 					<div class="product">
 						<div class="product-cover">
 							<a class="product-link" href="index.php?route=single_product&itemno={item_no}">
-								<img class="product-cover-img" src="{product_cover_photo}" alt="{product_name}">
+								<img class="product-cover-img" src="{cover_photo}" alt="{name}">
 							</a>
 						</div>
 						<h4 class="product-name">
 							<a class="product-link" href="index.php?route=single_product&itemno={item_no}">
-								{product_name}
+								{name}
 							</a>
 						</h4>
 						<p class="product-intro">
-							{product_intro}
+							{intro}
 						</p>
 					</div>
