--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -15,7 +15,7 @@
 
 @import url(normalize.css);
 
-h1, h2, h3, h4, h5, h6, p, span, a, label {
+h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 	font-family: sans-serif;
 }
 
@@ -1371,7 +1371,7 @@ $buy-now-btn-width: 44%;
 }
 
 #single-product-accordion > .ui-accordion-header {
-	margin-bottom: 20px;
+	margin-bottom: 1em;
 	padding: 10px 15px;
 	border-bottom: 1px solid #ddd;
 	background-color: #f5f5f5;
@@ -1383,6 +1383,10 @@ $buy-now-btn-width: 44%;
 	&.ui-state-hover {
 		color: #666;
 	}
+}
+
+.ui-accordion .ui-accordion-content {
+	padding-top: 0;
 }
 
 #single-product-price,
