--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -8,7 +8,7 @@
  * =========================================================================
  */
 @import url(normalize.css);
-h1, h2, h3, h4, h5, h6, p, span, a, label {
+h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   font-family: sans-serif;
 }
 
@@ -1282,7 +1282,7 @@ a.no-href {
   }
 }
 #single-product-accordion > .ui-accordion-header {
-  margin-bottom: 20px;
+  margin-bottom: 1em;
   padding: 10px 15px;
   border-bottom: 1px solid #ddd;
   background-color: #f5f5f5;
@@ -1294,6 +1294,10 @@ a.no-href {
 }
 #single-product-accordion > .ui-accordion-header.ui-state-hover {
   color: #666;
+}
+
+.ui-accordion .ui-accordion-content {
+  padding-top: 0;
 }
 
 #single-product-price,
