--- a/view/component/jumbotron/index_flexslider.html
+++ b/view/component/jumbotron/index_flexslider.html
@@ -24,7 +24,7 @@
 					</li>
 					<li>
 						<div>
-							<a href="//www.facebook.com/trisoap/" target="_blank">
+							<a href="//www.facebook.com/trisoap/" target="_blank" rel="noopener">
 								<img src="resource/img/index/index4.jpg" alt="工作坊開催中 Workshop">
 							</a>
 						</div>
