add meta open graph properties

--- a/view/head.html
+++ b/view/head.html
@@ -7,5 +7,9 @@
 		<title>三三吾鄉手工皂 Trisoap</title>
 		<meta name="author" content="2017 Trisoap Team">
 		<meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
+		<meta property="og:title" content="三三吾鄉手工皂 Trisoap" >
+		<meta property="og:url" content="https://www.trisoap.com.tw">
+		<meta property="og:image" content="https://www.trisoap.com.tw/resource/img/index/index1.jpg">
+		<meta property="og:description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！" >
 		<link rel="shortcut icon" href="resource/img/misc/favicon.png">
 		<link href="resource/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
