fix nav WL href

--- a/view/component/nav/login_admin.html
+++ b/view/component/nav/login_admin.html
@@ -3,7 +3,7 @@
 							管理平台
 							<i class="fa fa-angle-down"></i>
 							<ul class="nav-dropdown-menu">
-								<a class="nav-main-link" href="Trisoap_WL/index.php">
+								<a class="nav-main-link" href="/Trisoap_WL/index.php">
 									<li class="nav-dropdown-item">
 										倉儲暨物流管理
 									</li>
