rename logon -> signup, login -> signin, resourse/custom.js -> resource/functions.js

--- a/view/component/jumbotron/index_flexslider.html
+++ b/view/component/jumbotron/index_flexslider.html
@@ -3,29 +3,29 @@
 				<ul class="slides">
 					<li>
 						<div>
+							<a href="#">
+								<img src="resource/img/index/index01.jpg" alt="春節禮盒">
+							</a>
+						</div>
+					</li>
+					<li>
+						<div>
+							<a href="#">
+								<img src="resource/img/index/index02.jpg" alt="客製化專區">
+							</a>
+						</div>
+					</li>
+					<li>
+						<div>
 							<a href="index.php?route=about">
-								<img src="resource/img/index/index1.jpg" alt="三三吾鄉 About">
+								<img src="resource/img/index/index03.jpg" alt="三三吾鄉 Trisoap">
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
-							<a href="index.php?route=trial">
-								<img src="resource/img/index/index2.jpg" alt="試用皂免費申請中 Trial">
-							</a>
-						</div>
-					</li>
-					<li>
-						<div>
-							<a href="index.php?route=heart_message">
-								<img src="resource/img/index/index3.jpg" alt="希望留心語 Activity">
-							</a>
-						</div>
-					</li>
-					<li>
-						<div>
-							<a href="//www.facebook.com/trisoap/" target="_blank" rel="noopener">
-								<img src="resource/img/index/index4.jpg" alt="工作坊開催中 Workshop">
+							<a href="index.php?route=trial" target="_blank" rel="noopener">
+								<img src="resource/img/index/index04.jpg" alt="試用皂免費申請中 Trial">
 							</a>
 						</div>
 					</li>
