--- a/view/function/discountCreate.html
+++ b/view/function/discountCreate.html
@@ -11,7 +11,7 @@
     <meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href="resource/css/sign.css" rel="stylesheet">
-    <script src="resource/custom.js"></script>
+    <script src="resource/functions.js"></script>
 </head>
 
 <body>
