--- a/view/function/discountState0.html
+++ b/view/function/discountState0.html
@@ -10,7 +10,7 @@
         <meta name="description" content="三三是一個社會企業手工皂品牌。協助臺東之喜憨兒社福團體研發，與在地小農合作；融合自然人文，去除多餘添加，活用醜蔬果，綠活創新皂絲體驗。邀您一同創皂，台灣公益的嶄新面貌！">
         <link href="resource/css/bootstrap.min.css" rel="stylesheet">
         <link href="resource/css/style.css" rel="stylesheet">
-        <script src="resource/custom.js"></script>
+        <script src="resource/functions.js"></script>
     </head>
     <body id="page-top">
         <nav class="navbar navbar-fixed-top nav-custom">
@@ -71,7 +71,7 @@
                 <div class="manage">
                     <div class="row table-responsive">
                         <div class="tab-content">
-                            <div id="all" class="tab-pane fade in active">                        
+                            <div id="all" class="tab-pane fade in active">
                                 <table class="table table-hover">
                                     <thead>
                                         <tr>
