--- a/view/function/itemCreate.html
+++ b/view/function/itemCreate.html
@@ -12,7 +12,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href="resource/css/sign.css" rel="stylesheet">
     <link href="resource/css/single.css" rel="stylesheet">
-    <script src="resource/custom.js"></script>
+    <script src="resource/functions.js"></script>
 </head>
 
 <body>
