--- a/view/footer.html
+++ b/view/footer.html
@@ -26,8 +26,8 @@
 				<a class="footer-main-link" href="index.php?route=contact">
 					聯絡我們
 				</a>
-				<a class="footer-main-link" href="index.php?route=heart_message">
-					希望留心語
+				<a class="footer-main-link" href="index.php?route=customize">
+					客製化專區
 				</a>
 			</div>
 			<div class="footer-menu">
