--- a/view/nav.html
+++ b/view/nav.html
@@ -78,9 +78,9 @@
 
 						</li>
 					</a>
-					<a class="nav-main-link" href="index.php?route=heart_message">
+					<a class="nav-main-link" href="index.php?route=customize">
 						<li class="nav-main-item">
-							希望留心語
+							客製化專區
 						</li>
 					</a>
 					<a class="nav-main-link" href="javascript:void(0)">
