--- a/view/content/index.html
+++ b/view/content/index.html
@@ -1,16 +1,10 @@
 		<main>
 			<div class="buy-now-wrap">
 				<div class="buy-now">
-					<a class="hover-cover" href="index.php?route=product&itemno=4">
+					<a class="hover-cover" href="index.php?route=newyear">
 						<span class="primary-btn">立即購買</span>
 					</a>
-					<img class="buy-now-img" src="resource/img/product/gift.jpg" alt="三三臺東意象禮盒組 Gift Boxs">
-				</div>
-				<div class="buy-now">
-					<a class="hover-cover" href="index.php?route=product&itemno=1">
-						<span class="primary-btn">立即購買</span>
-					</a>
-					<img class="buy-now-img" src="resource/img/product/rice.jpg" alt="田靜山巒禾風皂 Rice Soap">
+					<img class="buy-now-img" src="resource/img/jumbotrons/newyear.jpg" alt="立即購買春節禮盒">
 				</div>
 			</div>
 			<div class="slogan-wrap">
