--- a/view/nav.html
+++ b/view/nav.html
@@ -52,8 +52,13 @@
 							<i class="fa fa-angle-down"></i>
 							<ul class="nav-dropdown-menu">
 								<li class="nav-dropdown-header">
-									臺東系列產品
+									中秋禮皂	已售罄
 								</li>
+								<a class="nav-main-link" href="index.php?route=newyear">
+									<li class="nav-dropdown-item">
+										春節禮盒
+									</li>
+								</a>
 								<a class="nav-main-link" href="index.php?route=soap">
 									<li class="nav-dropdown-item">
 										單品
