--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -504,6 +504,7 @@ $footer-line-height: 1.7;
  * 8. 聯絡我們｜Contact
  * 9. 購物須知｜Shopping Guide
  * 10. 單品 / 旅用皂絲｜Soap / Soapstring
+ * 11. 客製化專區｜Customize
  * =========================================================================
  */
 
@@ -700,20 +701,20 @@ $buy-now-btn-width: 44%;
 @media screen and (min-width: 980px) {
 	.buy-now-wrap {
 		display: grid;
-		grid-template-columns: 8% 15px auto 30px auto 15px 8%;
+		grid-template-columns: 16% auto 16%;
 		grid-template-rows: 90px auto 90px;
 		align-items: center;
 	}
 
 	.buy-now:first-child {
-		grid-column: 3 / 4;	// out of 8
-		grid-row: 2 / 3;	// out of 4
+		grid-column: 2 / 3;
+		grid-row: 2 / 3;
 	}
 
-	.buy-now:last-child {
-		grid-column: 5 / 6;	// out of 8
-		grid-row: 2 / 3;	// out of 4
-	}
+	// .buy-now:last-child {
+	// 	grid-column: 4 / 5;
+	// 	grid-row: 2 / 3;
+	// }
 }
 
 // Mobile
@@ -1411,4 +1412,20 @@ label[for="purchase-amount"] {
 #purchase-amount {
 	min-width: 66px;
 	max-width: 120px;
+}
+
+/* -------------------------------------------------------------------------
+ * 8. 聯絡我們｜Contact
+ * -------------------------------------------------------------------------
+ */
+
+#customize-wrap {
+	width: 100%;
+	margin-top: $main-nav-height;	// this page has no header
+}
+
+#customize-content-img {
+	display: block;
+	width: 100%;
+	height: auto;
 }
