--- a/view/component/jumbotron/index_flexslider.html
+++ b/view/component/jumbotron/index_flexslider.html
@@ -3,14 +3,14 @@
 				<ul class="slides">
 					<li>
 						<div>
-							<a href="#">
+							<a href="index.php?route=newyear">
 								<img src="resource/img/index/index01.jpg" alt="春節禮盒">
 							</a>
 						</div>
 					</li>
 					<li>
 						<div>
-							<a href="#">
+							<a href="index.php?route=customize">
 								<img src="resource/img/index/index02.jpg" alt="客製化專區">
 							</a>
 						</div>
