set page descriptions

--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -1415,7 +1415,7 @@ label[for="purchase-amount"] {
 }
 
 /* -------------------------------------------------------------------------
- * 8. 聯絡我們｜Contact
+ * 11. 客製化專區｜Customize
  * -------------------------------------------------------------------------
  */
 
