--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -1317,7 +1317,7 @@ label[for="purchase-amount"] {
 }
 
 /* -------------------------------------------------------------------------
- * 8. 聯絡我們｜Contact
+ * 11. 客製化專區｜Customize
  * -------------------------------------------------------------------------
  */
 #customize-wrap {
