update products info

--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -313,7 +313,7 @@ header {
 
 /* 1.2. Jumbotron - Img */
 
-$jumbotron-list: "about", "brand_intro", "contact", "faq", "media", "partner", "shopping_guide", "single_product", "soap", "soapstring", "trial";
+$jumbotron-list: "about", "brand_intro", "contact", "faq", "media", "newyear", "partner", "shopping_guide", "single_product", "soap", "soapstring", "trial";
 
 @each $item in $jumbotron-list {
 	#jumbotron-#{$item} {
