--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
  *  6:
  *  7: .flex-control-nav
  *  8: #main-navbar
- *  9: .nav-dropdown-menu
+ *  9: .nav-dropdown-menu, .nav-dropdown-submenu
  *  10:
  */
 /* =========================================================================
@@ -100,7 +100,8 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   cursor: default;
 }
 
-.nav-dropdown-menu {
+.nav-dropdown-menu,
+.nav-dropdown-submenu {
   display: none;
   list-style: none;
   background-color: #18191B;
@@ -150,27 +151,43 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
     padding: 0 13px;
   }
 
-  .nav-dropdown-header, .nav-dropdown-item {
+  .nav-dropdown-item, .nav-dropdown-header {
     padding: 12px 18px;
   }
 
   .nav-main-item {
     display: inline-block;
+    line-height: 60px;
+  }
+
+  .nav-dropdown-item {
+    line-height: normal;
   }
 
   .has-dropdown {
     position: relative;
   }
-  .has-dropdown:hover > .nav-dropdown-menu {
+  .has-dropdown:hover > .nav-dropdown-menu, .has-dropdown:hover > .nav-dropdown-submenu {
     display: block;
   }
 
-  .nav-dropdown-menu {
+  .nav-dropdown-menu,
+  .nav-dropdown-submenu {
     position: absolute;
     padding: 0;
     min-width: 210px;
-    margin-left: -13px;
     z-index: 9;
+  }
+
+  .nav-dropdown-menu {
+    top: 60px;
+    margin-left: -13px;
+  }
+
+  .nav-dropdown-submenu {
+    top: 0;
+    left: 210px;
+    margin-left: 0;
   }
 }
 @media screen and (max-width: 979px) {
@@ -194,14 +211,9 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
     overflow: auto;
   }
 
-  /* Mobile menu layout */
-  .nav-dropdown-header,
-  .nav-dropdown-item {
-    padding: 0 50px;
-  }
-
   .nav-main-item {
     width: 100%;
+    box-sizing: border-box;
     padding: 0 30px;
     line-height: 50px;
   }
@@ -209,22 +221,35 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
     background-color: #000;
   }
 
-  .nav-dropdown-menu {
-    width: 100%;
+  .nav-dropdown-menu,
+  .nav-dropdown-submenu {
     padding: 0;
+  }
+
+  .nav-dropdown-menu {
     margin-left: -30px;
+    margin-right: -30px;
+  }
+
+  .nav-dropdown-submenu {
+    margin-left: -50px;
+    margin-right: -50px;
   }
 
   .nav-dropdown-header,
   .nav-dropdown-item {
-    width: 100%;
-    height: 40px;
     box-sizing: border-box;
     line-height: 40px;
   }
 
-  .nav-dropdown-item:hover {
-    background-color: #000;
+  .nav-dropdown-menu > .nav-dropdown-item,
+  .nav-dropdown-menu > .nav-dropdown-header {
+    padding: 0 50px;
+  }
+
+  .nav-dropdown-submenu > .nav-dropdown-item,
+  .nav-dropdown-submenu > .nav-dropdown-header {
+    padding: 0 70px;
   }
 }
 /* =========================================================================
@@ -287,6 +312,10 @@ header {
 
 #jumbotron-media {
   background-image: url(../img/jumbotrons/media.jpg);
+}
+
+#jumbotron-moonfest {
+  background-image: url(../img/jumbotrons/moonfest.jpg);
 }
 
 #jumbotron-newyear {
