--- a/view/nav.html
+++ b/view/nav.html
@@ -13,99 +13,111 @@
 			</div>
 			<div id="nav-menu-wrap">
 				<ul id="nav-main-menu">
-					<a class="nav-main-link" href="/">
-						<li class="nav-main-item">
+					<li class="nav-main-item">
+						<a class="nav-main-link" href="/">
 							首頁
-						</li>
-					</a>
-					<a class="nav-main-link" href="javascript:void(0)">
-						<li class="nav-main-item has-dropdown">
+						</a>
+					</li>
+					<li class="nav-main-item has-dropdown">
+						<a class="nav-main-link" href="#">
 							關於三三
 							<i class="fa fa-angle-down"></i>
-							<ul class="nav-dropdown-menu">
+						</a>
+						<ul class="nav-dropdown-menu">
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=about">
-									<li class="nav-dropdown-item">
-										三三團隊
-									</li>
+									三三團隊
 								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=brand_intro">
-									<li class="nav-dropdown-item">
-										三三堅持
-									</li>
+									三三堅持
 								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=faq">
-									<li class="nav-dropdown-item">
-										顧客問答
-									</li>
+									顧客問答
 								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=contact">
-									<li class="nav-dropdown-item">
-										聯絡我們
-									</li>
+									聯絡我們
 								</a>
-							</ul>
-						</li>
-					</a>
-					<a class="nav-main-link" href="javascript:void(0)">
-						<li class="nav-main-item has-dropdown">
+							</li>
+						</ul>
+					</li>
+					<li class="nav-main-item has-dropdown">
+						<a class="nav-main-link" href="#">
 							三三產品
 							<i class="fa fa-angle-down"></i>
-							<ul class="nav-dropdown-menu">
-								<li class="nav-dropdown-header">
-									中秋禮皂	已售罄
-								</li>
+						</a>
+						<ul class="nav-dropdown-menu">
+							<li class="nav-dropdown-header">
+								中秋禮皂	已售罄
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=newyear">
-									<li class="nav-dropdown-item">
-										春節禮盒
-									</li>
+									春節禮盒
 								</a>
-								<a class="nav-main-link" href="index.php?route=soap">
-									<li class="nav-dropdown-item">
-										單品
-									</li>
+							</li>
+							<li class="nav-dropdown-item has-dropdown">
+								<a class="nav-main-link" href="#">
+									單品
+									<i class="fa fa-angle-down"></i>
 								</a>
+								<ul class="nav-dropdown-submenu">
+									<li class="nav-dropdown-item">
+										<a class="nav-main-link" href="index.php?route=soap">
+											宜蘭
+										</a>
+									</li>
+									<li class="nav-dropdown-item">
+										<a class="nav-main-link" href="index.php?route=soap">
+											台東
+										</a>
+									</li>
+								</ul>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=soapstring">
-									<li class="nav-dropdown-item">
-										旅用皂絲
-									</li>
+									旅用皂絲
 								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=shopping_guide">
-									<li class="nav-dropdown-item">
-										購物須知
-									</li>
+									購物須知
 								</a>
-							</ul>
-						</li>
-					</a>
-					<a class="nav-main-link" href="index.php?route=trial">
-						<li class="nav-main-item">
+							</li>
+						</ul>
+					</li>
+					<li class="nav-main-item">
+						<a class="nav-main-link" href="index.php?route=trial">
 							試用品申請
-
-						</li>
-					</a>
-					<a class="nav-main-link" href="index.php?route=customize">
-						<li class="nav-main-item">
+						</a>
+					</li>
+					<li class="nav-main-item">
+						<a class="nav-main-link" href="index.php?route=customize">
 							客製化專區
-						</li>
-					</a>
-					<a class="nav-main-link" href="javascript:void(0)">
-						<li class="nav-main-item has-dropdown">
+						</a>
+					</li>
+					<li class="nav-main-item has-dropdown">
+						<a class="nav-main-link" href="#">
 							異業合作
 							<i class="fa fa-angle-down"></i>
-							<ul class="nav-dropdown-menu">
+						</a>
+						<ul class="nav-dropdown-menu">
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=partner">
-									<li class="nav-dropdown-item">
-										合作夥伴
-									</li>
+									合作夥伴
 								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=media">
-									<li class="nav-dropdown-item">
-										媒體報導
-									</li>
+									媒體報導
 								</a>
-							</ul>
-						</li>
-					</a>
+							</li>
+						</ul>
+					</li>
 					{login_status}
 				</ul>
 			</div>
