--- a/view/nav.html
+++ b/view/nav.html
@@ -19,7 +19,7 @@
 						</a>
 					</li>
 					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="#">
+						<a class="nav-main-link" href="javascript:void(0)">
 							關於三三
 							<i class="fa fa-angle-down"></i>
 						</a>
@@ -61,27 +61,40 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item has-dropdown">
-								<a class="nav-main-link" href="#">
+								<a class="nav-main-link" href="">
 									單品
-									<i class="fa fa-angle-down"></i>
+									<i class="fa fa-angle-right"></i>
 								</a>
 								<ul class="nav-dropdown-submenu">
 									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soap">
+										<a class="nav-main-link" href="index.php?route=soap&cat=yilan">
 											宜蘭
 										</a>
 									</li>
 									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soap">
+										<a class="nav-main-link" href="index.php?route=soap&cat=taitung">
 											台東
 										</a>
 									</li>
 								</ul>
 							</li>
-							<li class="nav-dropdown-item">
-								<a class="nav-main-link" href="index.php?route=soapstring">
+							<li class="nav-dropdown-item has-dropdown">
+								<a class="nav-main-link" href="javascript:void(0)">
 									旅用皂絲
+									<i class="fa fa-angle-right"></i>
 								</a>
+								<ul class="nav-dropdown-submenu">
+									<li class="nav-dropdown-item">
+										<a class="nav-main-link" href="index.php?route=soapstring&cat=yilan">
+											宜蘭
+										</a>
+									</li>
+									<li class="nav-dropdown-item">
+										<a class="nav-main-link" href="index.php?route=soapstring&cat=taitung">
+											台東
+										</a>
+									</li>
+								</ul>
 							</li>
 							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=shopping_guide">
@@ -101,7 +114,7 @@
 						</a>
 					</li>
 					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="#">
+						<a class="nav-main-link" href="javascript:void(0)">
 							異業合作
 							<i class="fa fa-angle-down"></i>
 						</a>
