--- a/view/nav.html
+++ b/view/nav.html
@@ -67,12 +67,12 @@
 								</a>
 								<ul class="nav-dropdown-submenu">
 									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soap&cat=yilan">
+										<a class="nav-main-link" href="index.php?route=soap&cat=yl">
 											宜蘭
 										</a>
 									</li>
 									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soap&cat=taitung">
+										<a class="nav-main-link" href="index.php?route=soap&cat=tt">
 											台東
 										</a>
 									</li>
@@ -85,12 +85,12 @@
 								</a>
 								<ul class="nav-dropdown-submenu">
 									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soapstring&cat=yilan">
+										<a class="nav-main-link" href="index.php?route=soapstring&cat=yl">
 											宜蘭
 										</a>
 									</li>
 									<li class="nav-dropdown-item">
-										<a class="nav-main-link" href="index.php?route=soapstring&cat=taitung">
+										<a class="nav-main-link" href="index.php?route=soapstring&cat=tt">
 											台東
 										</a>
 									</li>
