fix link href to javascript:void(0)

--- a/view/nav.html
+++ b/view/nav.html
@@ -47,7 +47,7 @@
 						</ul>
 					</li>
 					<li class="nav-main-item has-dropdown">
-						<a class="nav-main-link" href="#">
+						<a class="nav-main-link" href="javascript:void(0)">
 							三三產品
 							<i class="fa fa-angle-down"></i>
 						</a>
@@ -61,7 +61,7 @@
 								</a>
 							</li>
 							<li class="nav-dropdown-item has-dropdown">
-								<a class="nav-main-link" href="">
+								<a class="nav-main-link" href="javascript:void(0)">
 									單品
 									<i class="fa fa-angle-right"></i>
 								</a>
