--- a/view/component/nav/login_member.html
+++ b/view/component/nav/login_member.html
@@ -1,6 +1,6 @@
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
-							管理平台
+							會員中心 / 登出
 							<i class="fa fa-angle-down"></i>
 						</a>
 						<ul class="nav-dropdown-menu">
