--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -52,7 +52,6 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   left: 0;
   right: 0;
   width: 100%;
-  height: 60px;
   background-color: #18191B;
   z-index: 8;
 }
@@ -62,8 +61,6 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 #nav-menu-wrap {
   margin: auto;
   display: inline-block;
-  height: 60px;
-  line-height: 60px;
 }
 
 #nav-brand-wrap {
@@ -73,20 +70,31 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 .nav-brand {
   display: block;
   justify-self: flex-start;
+  line-height: 60px;
 }
 
 #brand-logo {
   width: auto;
   vertical-align: middle;
+  padding: 0 15px;
 }
 
 #nav-main-menu {
   margin: 0;
+  padding: 0;
+  list-style: none;
+  background-color: #18191B;
+}
+
+.nav-dropdown-menu,
+.nav-dropdown-submenu {
+  display: none;
   list-style: none;
   background-color: #18191B;
 }
 
 .nav-main-link {
+  display: block;
   text-decoration: none;
   color: #fff;
   transition: color .3s ease-in-out;
@@ -98,13 +106,6 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
 .nav-dropdown-header {
   color: #777;
   cursor: default;
-}
-
-.nav-dropdown-menu,
-.nav-dropdown-submenu {
-  display: none;
-  list-style: none;
-  background-color: #18191B;
 }
 
 .nav-dropdown-item:hover {
@@ -147,21 +148,16 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   }
 
   /* Laptop menu layout */
-  .nav-main-item {
-    padding: 0 13px;
+  .nav-main-item > .nav-main-link {
+    padding: 22px 13px;
   }
 
-  .nav-dropdown-item, .nav-dropdown-header {
+  .nav-dropdown-item > .nav-main-link, .nav-dropdown-header {
     padding: 12px 18px;
   }
 
   .nav-main-item {
     display: inline-block;
-    line-height: 60px;
-  }
-
-  .nav-dropdown-item {
-    line-height: normal;
   }
 
   .has-dropdown {
@@ -214,11 +210,12 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   .nav-main-item {
     width: 100%;
     box-sizing: border-box;
-    padding: 0 30px;
-    line-height: 50px;
   }
   .nav-main-item:hover {
     background-color: #000;
+  }
+  .nav-main-item > .nav-main-link {
+    padding: 17px 30px;
   }
 
   .nav-dropdown-menu,
@@ -226,30 +223,14 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
     padding: 0;
   }
 
-  .nav-dropdown-menu {
-    margin-left: -30px;
-    margin-right: -30px;
-  }
-
-  .nav-dropdown-submenu {
-    margin-left: -50px;
-    margin-right: -50px;
-  }
-
-  .nav-dropdown-header,
-  .nav-dropdown-item {
-    box-sizing: border-box;
-    line-height: 40px;
-  }
-
-  .nav-dropdown-menu > .nav-dropdown-item,
+  .nav-dropdown-menu > .nav-dropdown-item > .nav-main-link,
   .nav-dropdown-menu > .nav-dropdown-header {
-    padding: 0 50px;
+    padding: 12px 50px;
   }
 
-  .nav-dropdown-submenu > .nav-dropdown-item,
+  .nav-dropdown-submenu > .nav-dropdown-item > .nav-main-link,
   .nav-dropdown-submenu > .nav-dropdown-header {
-    padding: 0 70px;
+    padding: 12px 70px;
   }
 }
 /* =========================================================================
