--- a/view/head_finish.html
+++ b/view/head_finish.html
@@ -1,4 +1,4 @@
 		<link href="resource/css/trisoap.css" rel="stylesheet">
 	</head>
-	<body>
+	<body class="no-scroll">
 		<div id="preloader"></div>
