--- a/view/footer_finish.html
+++ b/view/footer_finish.html
@@ -1,6 +1,4 @@
-
-		<script src="resource/js/jquery-3.2.1.min.js"></script>
 		<script src="resource/functions.js" defer></script>
-		<script src="resource/js/layout-main.js" defer></script>
+		<script src="resource/js/view.js" defer></script>
 	</body>
 </html>
