--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -24,14 +24,20 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
  *  7: .flex-control-nav
  *  8: #main-navbar
  *  9: .nav-dropdown-menu, .nav-dropdown-submenu
- *  10:
+ *  10: #preloader
  */
 /* =========================================================================
  * Preloader
  * =========================================================================
  */
 #preloader {
-  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #B29772;
+  transition: opacity 1.5s ease;
+  z-index: 10;
 }
 
 /* =========================================================================
@@ -54,6 +60,7 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   width: 100%;
   background-color: #18191B;
   z-index: 8;
+  opacity: 1;
 }
 
 #nav-brand-wrap,
@@ -187,6 +194,10 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   }
 }
 @media screen and (max-width: 979px) {
+  .fa-angle-right {
+    transform: rotate(90deg);
+  }
+
   #brand-logo {
     height: 20px;
   }
@@ -424,7 +435,7 @@ header {
   transition: color 0.3s;
 }
 
-.footer-menu .footer-main-link {
+.footer-menu:not(#company-info) .footer-main-link {
   display: block;
 }
 
@@ -514,6 +525,10 @@ header {
  * 0. Shared Properties
  * -------------------------------------------------------------------------
  */
+.no-scroll {
+  overflow: hidden;
+}
+
 a.no-href {
   cursor: default;
 }
