--- a/view/head_finish.html
+++ b/view/head_finish.html
@@ -1,4 +1,6 @@
 		<link href="resource/css/trisoap.css" rel="stylesheet">
 	</head>
 	<body class="no-scroll">
-		<div id="preloader"></div>
+		<!-- <div id="preloader">
+			<canvas id="preloader-canvas"></canvas>
+		</div> -->
