--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -31,13 +31,22 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
  * =========================================================================
  */
 #preloader {
+  display: flex;
   position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
+  justify-content: center;
+  align-items: center;
   background-color: #B29772;
   transition: opacity 1.5s ease;
   z-index: 10;
+}
+
+#preloader-canvas {
+  width: 250px;
+  height: 250px;
+  background-color: #000;
 }
 
 /* =========================================================================
@@ -342,9 +351,9 @@ header {
   position: relative;
   width: 100vw;
   height: 33.75vw;
+  text-align: center;
   background-size: contain;
   background-repeat: no-repeat;
-  text-align: center;
   z-index: 0;
 }
 .img-jumbotron::before {
