fix fa angle rotate error

--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -258,7 +258,7 @@ $nav-toggle-span-height: 2px;
 	$nav-dropdown-menu-padding: 50px;
 	$nav-dropdown-submenu-padding: 70px;
 
-	.fa-angle-right {
+	.nav-main-link > .fa-angle-right {
 		transform: rotate(90deg);
 	}
 
