--- a/view/footer_finish.html
+++ b/view/footer_finish.html
@@ -1,4 +1,4 @@
 		<script src="resource/functions.js" defer></script>
-		<script src="resource/js/view.js" defer></script>
+		<script src="resource/js/view/general.js" defer></script>
 	</body>
 </html>
