--- a/resource/css/trisoap.css
+++ b/resource/css/trisoap.css
@@ -203,7 +203,7 @@ h1, h2, h3, h4, h5, h6, p, span, div, a, label {
   }
 }
 @media screen and (max-width: 979px) {
-  .nav-main-link .fa-angle-right {
+  .nav-main-link > .fa-angle-right {
     transform: rotate(90deg);
   }
 
